--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/svg+xml" href="icons/pet-icon.svg">
+  <link rel="apple-touch-icon" href="icons/pet-icon.png">
   <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css">
   <link rel="manifest" href="manifest.webmanifest">
 </head>
